--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_neumorphic: ^3.0.3
+  http: ^0.13.3
+  universal_platform: ^1.0.0+1
+  universal_io: ^2.0.4
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
