--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,14 @@ dependencies:
   universal_io: ^2.0.4
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
+  adaptive_theme: ^2.2.0
+  flutter_riverpod: ^0.14.0+3
+  animated_background: ^2.0.0
+  fluttertoast: ^8.0.8
+  shared_preferences: ^2.0.1
+  session: ^1.0.3+2
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +46,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
